<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <TextView
        android:id="@+id/tvEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/strRegister"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:background="@drawable/textview_style"
        android:id="@+id/etName"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:hint="@string/strName"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/tvEnter"
        app:layout_constraintBottom_toTopOf="@id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:background="@drawable/textview_style"
        android:id="@+id/etUsername"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:hint="@string/strLogin"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:background="@drawable/textview_style"
        android:id="@+id/etPassword"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:hint="@string/strPassword"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button_style"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/btnSignup2"
        android:layout_width="377dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/strBtnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>