<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.Black.NoTitleBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/strVhod"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/strLogin"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/tvEnter"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/strPassword"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button_style"
        android:layout_marginLeft="10dp"
        android:textSize="21dp"
        android:textColor="@color/white"
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/strEnter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSignup"
        android:layout_marginTop="130dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button_style"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:textSize="21dp"
        android:textColor="@color/white"
        android:id="@+id/btnSignup"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/strRegister"
        app:layout_constraintStart_toEndOf="@id/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>