<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <TextView
        android:id="@+id/tvHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/strChangingUserData"
        android:textSize="25dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/textview_style"
        android:id="@+id/etUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/strLogin"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/etPassWord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHead" />

    <EditText
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/textview_style"
        android:id="@+id/etPassWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="13dp"
        android:hint="@string/strPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvHead" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button_style"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="13dp"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/btnChange"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/strBtnChangeUserData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>